--- a/styles/home.css
+++ b/styles/home.css
@@ -1,12 +1,3 @@
-body {
-    background-color: #DFECF5;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-#cabecalho {
-    background-color: #233255;
-}
-
 #logo {
     filter: brightness(6) saturate(100%);
 }
@@ -56,11 +47,6 @@ body {
     color: #233154;
 }
 
-#rodape {
-    background-color: #233255;
-    color: #FFFFFF;
-}
-
 #modalLogin {
     z-index: 1050;
 }
@@ -78,6 +64,10 @@ body {
     filter: invert();
     --bs-btn-close-opacity: 0.75;
     --bs-btn-close-hover-opacity: 1;
+}
+
+.btn-close:focus {
+    box-shadow: none;
 }
 
 #formLogin label {
@@ -98,4 +88,13 @@ body {
 .modal-content {
     background-color: #DFECF5;
     height: 50vh;
+}
+
+.alert {
+    --bs-alert-margin-bottom: 0;
+    position: absolute;
+}
+
+#alertaErro button {
+    filter: none;
 }
