--- a/styles/cliente.css
+++ b/styles/cliente.css
@@ -32,7 +32,7 @@
     width: 4em;
 }
 
-#edicaoUsuario, #meusConsentimentos {
+#edicaoUsuario, #conteudo {
     background-color: #FFFFFF;
     border-radius: 10px;
 }
