--- a/styles/padrao.css
+++ b/styles/padrao.css
@@ -30,3 +30,13 @@ footer {
 .btn-close:focus, .form-control:focus {
     box-shadow: none;
 }
+
+.btn-primary {
+    --bs-btn-bg: #076EA0;
+    --bs-btn-border-color: #076EA0;
+    --bs-btn-hover-bg: #233255;
+}
+
+.btn {
+    transition: 0.2s !important;
+}
